using variable references to values

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">MadLevel1Examplev02</string>
+    <string name="question">What kind of animal is this?</string>
     <string name="giraffe">Giraffe</string>
     <string name="correct">Correct!</string>
+    <string name="confirm">Confirm</string>
     <string name="incorrect">Incorrect, the correct answer is Giraffe!</string>
+    <string name="hint">Species</string>
 </resources>
